spec/test/_test_case_archive/sample2/data-error/9/result.txt
do_test tecsgen /home/ykominami/repo/ns3-tecsgen/tecsgen/test_auto/spec/test_data2/sample2/data-error/9 error-9.idl
/home/ykominami/repo/ns3-tecsgen/tecsgen/test_auto/spec/test_data2/sample2/data-error/9 ~
##### tecsgen error-9.idl  #####
error-9.idl:1:18: error: G1016 syntax error near 'int32'
1 error
~
